# toronto-events

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
data/processed/: README.md  manual_review_queue.csv  toronto_event_sources.csv
docs/: VALIDATION_UI.md
examples/: TUTORIAL.md  quick_test.py
scripts/: analyze_domains.py  apply_validations.py  download_wdc_events.py  extract_events.py  filter_domains.py  generate_outputs.py  geo_filter.py  identify_relevant_parts.py  prepare_validation_data.py  run_pipeline.py  score_domains.py
src/toronto_events/: __init__.py
src/toronto_events/core/: __init__.py  geo_filter.py  nquads_parser.py
validation_ui/: app.js  domains.json  index.html  styles.css
